Fixed some breaks at different sizes. Padding for nav and logo made more consistent. Nav functionality a little buggy at iPad size.

--- a/css/nav.css
+++ b/css/nav.css
@@ -2,10 +2,10 @@
 
 .navigation {
     position: fixed;
-    max-height: 70px;
+    max-height: 60px;
     z-index: 100;
     width: 100%;
-    padding-top: 24px;
+    padding-top: 18px;
     background-color: rgba(255, 255, 255, 0.8);
     /*    overflow: hidden;*/
     overflow: hidden;
@@ -14,7 +14,6 @@
     opacity: 0;
     top: -100px;
     padding-bottom: 6px;
-    padding-top: 10px;
 }
 
 @media only screen and (min-width: 768px) {
@@ -42,27 +41,31 @@
     width: 100%;
     margin: 0 auto;
     position: relative;
-    padding: 0 5%;
+    padding-top: 0;
+    padding-bottom: 0;
+    padding-left: 5%;
+    padding-right: 5%;
     box-sizing: border-box;
 }
 
-
 @media only screen and (min-width: 768px) {
     .row {
-        padding: 0 30px;
+        padding-left: 40px;
+        padding-right: 40px;
     }
 }
 
 @media only screen and (min-width: 1024px) {
     .row {
-        padding: 0 40px;
+        padding-left: 40px;
+        padding-right: 40px;
     }
 }
 
 .logo {
-    /*    height: 30px;*/
-    height: 80px;
-    width: 230px;
+    height: 50px;
+    /*    height: 80px;*/
+    width: 100px;
     font-size: 25px;
     color: #8f8f8f;
     text-transform: uppercase;
@@ -78,16 +81,27 @@
 
 @media only screen and (min-width: 768px) {
     .logo {
+        height: 80px;
+        width: 100px;
         background-image: url("../img/logo-lg.png");
-        margin-left: 10px;
-        /*        float: none;*/
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .logo {
+        width: 200px;
     }
 }
 
 
 /* Large screens */
 
-@media only screen and (min-width: 1440px) {}
+@media only screen and (min-width: 1440px) {
+    .logo {
+        height: 100px;
+        width: 200px;
+    }
+}
 
 
 /* XL screens */
@@ -110,7 +124,7 @@
 
 nav {
     float: right;
-    width: 50%;
+    width: 100%;
 }
 
 nav ul {
@@ -118,6 +132,8 @@ nav ul {
     /*    overflow: hidden;*/
     text-align: right;
     float: right;
+    -webkit-margin-before: 0.25em;
+    -webkit-margin-after: 0.25em;
 }
 
 nav li {
@@ -179,6 +195,7 @@ nav li.button a:hover {
         width: 100%;
         padding: 7px 0;
         margin: 0;
+        box-sizing: border-box;
     }
 }
 
@@ -186,7 +203,7 @@ nav li.button a:hover {
 
 @media only screen and (min-width: 768px) {
     nav {
-        width: 70%;
+        width: 100%;
     }
     nav:before,
     nav:after {
@@ -200,9 +217,9 @@ nav li.button a:hover {
 
 /* Medium screens */
 
-@media only screen and (min-width: 1224px) {
+@media only screen and (min-width: 1024px) {
     nav {
-        width: 80%;
+        width: 75%;
     }
 }
 
@@ -212,7 +229,7 @@ nav li.button a:hover {
     font-size: 20px;
     position: absolute;
     right: 22px;
-    top: 0;
+    top: 9px;
     width: 30px;
     -webkit-transition: all 200ms ease-in;
     -moz-transition: all 200ms ease-in;
